--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,30 @@ main {
     position: relative;
     top: 0;
     left: 0;
+    cursor: pointer;
+}
+
+.first-img {
+    position: relative;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.second-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+}
+
+.card:hover::after:first-of-type {
+    content-visibility: visible;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
 .card img {
@@ -127,6 +151,11 @@ main {
     top: 10px;
     right: 0;
     font-size: 25px;
+    z-index: 3;
+}
+
+.favourite:hover {
+    color: red;
 }
 
 /* Card Footer */
