--- a/css/style.css
+++ b/css/style.css
@@ -95,29 +95,24 @@ main {
     position: relative;
     top: 0;
     left: 0;
-    z-index: 1;
+    display: inline-block;
 }
 
 .second-img {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 2;
+    display: none;
 }
 
-.card:hover::after:first-of-type {
-    content-visibility: visible;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+.first-img:hover+.second-img {
+    display: inline-block;
 }
+
 
 .card img {
     max-width: 100%;
     max-height: 100%;
-    display: block;
 }
 
 /* bottom badges */
@@ -130,6 +125,7 @@ main {
     position: absolute;
     left: 0;
     bottom: 40px;
+    z-index: 3;
 }
 
 .discount {
@@ -166,7 +162,7 @@ main {
 
 
 .new-price {
-    color: #FF6900;
+    color: red;
 }
 
 .orig-price {
